--- a/Lab02/Lab02.css
+++ b/Lab02/Lab02.css
@@ -79,9 +79,6 @@ h1 {
   text-align: center;
   filter: drop-shadow(2px,2px,1px,#0f6a9e);
 }
-figcaption {
-  color:  rgb(0, 58, 66);
-}
 h2 {
   margin: 4rem auto 1rem auto;
   text-align: center;
@@ -98,16 +95,14 @@ ol li {
   padding: 10px 0;
 }
 img {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-  margin-left: 1rem;
-  margin-right: 1rem;
+  margin: 1rem;
   border-radius: 1rem;
   box-shadow: 2px, 2px, 2px, 1px, rgb black,.5;
 }
 figcaption {
   text-align: center;
   font-weight: bold;
+  color:  rgb(0, 58, 66);
 }
 footer {
   margin: 2rem 0 2rem 0;
@@ -155,7 +150,7 @@ footer {
 }
 
 /* ----- MEDIA QUERIES for RESPONSIVE DESIGN ----- */
-
+/* Need better understanding of flex-wrap*/
 @media only screen and (max-width: 1500px) {
   .img-div img {
     width: 420px;
@@ -164,6 +159,8 @@ footer {
 
 @media only screen and (max-width: 1100px) {
   .tips-div {
+    flex-wrap: wrap;
+    justify-content: center;
   }
 }
 
@@ -181,9 +178,12 @@ footer {
   .tips-div img {
     width: 230px;
   }
+/*don't understand this>*/
   #banner-long {
+    display: long;
   }
   #banner-short {
+    display: block;
   }
 }
 /* ------------------------- */
