--- a/Lab02/Lab02.css
+++ b/Lab02/Lab02.css
@@ -69,7 +69,7 @@ html {
   background: linear-gradient(180deg, #84daf5, #89ffff, #affffa, #ffffff);
 }
 body { 
-    margin 1rem,
+    margin: 1rem, 5rem;
 }
 
 h1 {
@@ -125,7 +125,7 @@ footer {
 .img-div {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 .tips-div {
@@ -178,7 +178,7 @@ footer {
   }
 /*don't understand this>*/
   #banner-long {
-    display: long;
+    display: none;
   }
   #banner-short {
     display: block;
